remove logout icon in corner menubar

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
              <div class="job">Ray</div>
            </div>
          </div>
-         <i class='bx bx-log-out' id="log_out" ></i>
+         <i id="log_out" ></i>
      </li>
     </ul>
   </div>
