add container for content

--- a/index.html
+++ b/index.html
@@ -72,6 +72,15 @@
   <section class="home-section">
 
 
+    <div class="home-section-content">
+      <p>hello</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum numquam vitae debitis et nulla. Et tempora harum rerum neque soluta, sunt, aspernatur quod laboriosam quos, nam aperiam explicabo similique saepe!</p>
+
+      </div>
+
+
+
+
 
 
         <div id="modal" class="modal">
@@ -132,21 +141,6 @@ testButton.addEventListener("click", openModal);
 function openModal() {
     modal.style.display = "block";
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
