--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
   
   <section class="home-section">
-    <video src="Videos/anbshots reclame 1.mp4"  id="videoBG" autoplay loop>
+    <video src="https://youtu.be/dQiYnFQX3Qg"  id="videoBG" autoplay loop>
       
       
     </video>
